fix: adding wrapping in .box-footer
Also, adding padding: 25px to the .box-footer--large fixing some issues...

--- a/css/flex-styles.css
+++ b/css/flex-styles.css
@@ -286,12 +286,15 @@ body {
     align-items: center;
     /* Let's flex you! */
     display: flex;
+    /* Let's wrap some items... */
+    flex-wrap: wrap;
     /* The "gap" is useful, and modern browsers support it. */
     gap: 25px;
     /* Let's add some width and height. */
     height: 300px;
     /* Justify content in action! */
     justify-content: center;
+    /* It's the width... */
     width: 30%;
 }
 
@@ -300,6 +303,8 @@ body {
     /* Let's use the `flex` property! */
     /* This is a shorthand. It contains "flex-basis", "flex-shrink", and "flex-grow". */
     flex: 2;
+    /* And add some padding... */
+    padding: 25px;
 }
 
 /* Adding a return button to the top. */
